# open-data-scientist

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: README.md  dabstep.py  kaggle.py
eval/kaggle_data/jigsaw/: download_jigsaw_data.sh  readme.txt
eval/kaggle_data/spooky/: download_spooky_data.sh  readme.txt
eval/results/: dabstep_submission.jsonl  kaggle_spooky_submission.csv
examples/solubility_prediction/: README.md  build_a_machine_learning_model_to_predict_the_solu.md  build_an_ml_model_to_predict_molecular_solubility_.md
interpreter/: .dockerignore  Dockerfile  README.md  code_executor.py  docker-compose.yml  download_data.py  main.py  requirements.txt  run.py  session_manager.py
open_data_scientist/: __init__.py  cli.py  codeagent.py
open_data_scientist/utils/: executors.py  strings.py  writer.py
tests/: test_agent_data_analysis.py  test_executors.py  test_final_answer_execution.py  test_functional.py  test_session_deletion.py  test_truncation_simple.py  test_variable_isolation.py
